objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Company_URL__c</fullName>
        <label>Company URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <label>Contact Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>FirstName+&quot; &quot;+LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Linkedin__c</fullName>
        <label>Linkedin</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Email__c</fullName>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Support_End_Date__c</fullName>
        <label>Support End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Support_Start_Date__c</fullName>
        <label>Support Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <inlineHelpText>Enter the Time Zone of the client (Ex: EST, PST, IST etc.)</inlineHelpText>
        <label>Time Zone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AR_Contacts_V</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.REPORTS_TO.NAME</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.LEAD_SOURCE</columns>
        <columns>Reference__c</columns>
        <filterScope>Everything</filterScope>
        <label>AR-Contacts-V</label>
    </listViews>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BPM_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>PSK</value>
        </filters>
        <label>BPM Contacts</label>
        <sharedTo>
            <group>BPM_Services_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>